web/emojivoto-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emojivoto-web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: emojivoto-web
