web/emojivoto-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: emojivoto-web
spec:
  ingressClassName: nginx
  rules:
  - host: emojivoto.odd.works
    http:
      paths:
      - backend:
          service:
            name: emojivoto-web
            port:
              number: 8080
        path: /
        pathType: Prefix
